--- a/散列.md
+++ b/散列.md
@@ -37,6 +37,7 @@
    ```
 ## 解决散列冲突
 1.分离链接法
+
 将散列到同一个值的所有元素保留到一个表中
 
 ![](http://img.my.csdn.net/uploads/201301/02/1357132078_1110.jpg)
@@ -44,17 +45,25 @@
 2.开放地址法
 
    1.线性探测法
+   
    通过散列函数hash(key)，找到关键字key在线性序列中的位置，如果当前位置已经有了一个关键字，就长生了哈希冲突，就往后探测i个位置（i小于线性序列的大小），直到当前位置没有关键字存在。
+   
+   f(key,i) = (hash(key)+i) mod TableSize
+   
    ![](http://static.oschina.net/uploads/img/201606/28163944_loVe.png)
    
    2.平方探测法
+   
    若当前key与原来key产生相同的哈希地址，则当前key存在该地址后偏移量为（1,2,3...）的二次方地址处
    
-   key1：hash(key)+0
-   
-   key2：hash(key)+1^2
-   
-   key3：hash(key)+2^2
+   f(key,i) = (hash(key)+i²) mod TableSize
+
    ![](http://static.oschina.net/uploads/img/201606/28163944_xkSU.png)
    
    3.双散列法
+   
+   f(key,i) = (hash1(key)+hash2(key)*i) mod TableSize
+
+   hash2(key) = R - (key mod R)，其中R为小于TableSize的素数
+   
+   
