--- a/散列.md
+++ b/散列.md
@@ -36,13 +36,13 @@
    }
    ```
 ## 解决散列冲突
-1.分离链接法
+### 1.分离链接法
 
 将散列到同一个值的所有元素保留到一个表中
 
 ![](http://img.my.csdn.net/uploads/201301/02/1357132078_1110.jpg)
 
-2.开放地址法
+### 2.开放地址法
 
    1.线性探测法
    
