--- a/散列.md
+++ b/散列.md
@@ -65,5 +65,7 @@
    f(key,i) = (hash1(key)+hash2(key)*i) mod TableSize
 
    hash2(key) = R - (key mod R)，其中R为小于TableSize的素数
-   
-   
+### 再散列
+对于开放定址法，如果散列填的太慢，那么操作的运行时间将开始消耗过长，且插入操作可能
+失败，此时，一种解决方法是建立另外一个大约两倍大的表(而且使用一个相关的新散列函数)，
+扫描整个原始散列表，计算每个(未删除的)元素的新散列值并将其插入到新表中。
