--- a/时间复杂度.md
+++ b/时间复杂度.md
@@ -1,10 +1,10 @@
 ## 一、时间复杂度  
 
-###（1）时间频度 
+### 1.时间频度 
 
 一个算法执行所耗费的时间，从理论上是不能算出来的，必须上机运行测试才能知道。但我们不可能也没有必要对每个算法都上机测试，只需知道哪个算法花费的时间多，哪个算法花费的时间少就可以了。并且一个算法花费的时间与算法中语句的执行次数成正比例，哪个算法中语句执行次数多，它花费时间就多。一个算法中的语句执行次数称为语句频度或时间频度。记为T(n)。 
 
-###（2）时间复杂度 
+### 2.时间复杂度 
 
 在刚才提到的时间频度中，n称为问题的规模，当n不断变化时，时间频度T(n)也会不断变化。但有时我们想知道它变化时呈现什么规律。为此，我们引入时间复杂度概念。 
 
