--- a/database/索引.md
+++ b/database/索引.md
@@ -27,3 +27,5 @@
 ## B+树索引和哈希索引的区别
 + B+树是一个平衡的多叉树，从根节点到每个叶子节点的高度差值不超过1，而且同层级的节点间有指针相互链接，是有序的
 + 哈希索引就是采用一定的哈希算法，把键值换算成新的哈希值，检索时不需要类似B+树那样从根节点到叶子节点逐级查找，只需一次哈希算法即可,是无序的
+
+[参考资料](https://blog.csdn.net/qq_33591903/article/details/82146995)
